objects/FLODocs__Change_Request_Mandated_Approver__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Chage_Request_Name__c</fullName>
        <label>Chage Request Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Overview__c</fullName>
        <label>Change Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Request_Created_Date__c</fullName>
        <label>Change Request Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Change Request Mandated Approvers</relationshipLabel>
        <relationshipName>Change_Request_Mandated_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Type__c</fullName>
        <formula>TEXT(FLODocs__Change_Request__r.FLODocs__Change_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Completion_Status__c</fullName>
        <formula>TEXT(FLODocs__Change_Request__r.FLODocs__Completion_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customizations__c</fullName>
        <label>Customizations</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Link_Change_Request__c</fullName>
        <label>Link Change Request</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Mandated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Request_Mandated_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Proposed_Customizations__c</fullName>
        <label>Proposed Customization(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Stage__c</fullName>
        <formula>TEXT(FLODocs__Change_Request__r.FLODocs__Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <label>Change Request Mandated Approver</label>
    <nameField>
        <label>Change Request Mandated Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Request Mandated Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>